딥러닝 - 기초공부, 머신러닝 - 용어 수정

--- a/■ 머신러닝(정형 데이터).md
+++ b/■ 머신러닝(정형 데이터).md
@@ -8,8 +8,8 @@
 - 샘플
 
 열
-- 특성(feature) = 독립변수
-- 타겟(target) = 클래스 = 레이블 = 정답 = 종속변수
+- 특성(feature) = 입력 = 독립변수 = 예측 변수
+- 타겟(target) = 정답 = (클래스)레이블 = 종속변수 = 반응 변수
 
 모델 파라미터: 모델 학습 변수(자동)
 - 가중치: 중요도
@@ -30,7 +30,7 @@
 
 ---
 ## 지도 학습
-데이터(입력) + 정답(타겟) → 모델 → 정답 예측
+데이터(특성+타겟) → 모델 → 데이터 예측
 ```angular2html
 과대적합
 - 훈련 데이터 정확도 >> 테스트 데이터 정확도
@@ -49,6 +49,9 @@
   ```
   가중치 = 기울기(계수) 
   편향 = 절편
+  
+  특성 - 예측 변수
+  타겟 - 반응 변수
   
   가설 함수: x축-독립변수, y축-종속변수
   비용 함수: x축-가중치, y축-오차
@@ -209,7 +212,7 @@
   >- 약한 분류 모델 → 병렬/직렬 → 강한 분류 모델
   >
   >· 장점: 결정 트리 단점 보완 
-  >>```
+  >```
   >#### 보팅, 배깅, 부스팅
   > 
   >---
@@ -220,7 +223,7 @@
   >- soft: 각 모델별 확률합의 평균을 구한 후 최대값을 선택
   >- hard: 각 모델의 결과값 중 가장 많은걸 선택(다수결의 원칙)
   >```
-  >---
+  >
   >#### 배깅(Bagging)
   >```
   >동일한 분류 모델 / 병렬
@@ -285,7 +288,7 @@
   >  >``` 
      
 ## 비지도 학습
-데이터(입력) → 모델 → 특징 찾기
+데이터(특성) → 모델 → 특징 찾기
 
 + ### 군집
     비슷한 샘플 그룹화
@@ -298,7 +301,7 @@
     ```
     >K-평균(K-means, 비계층적)
     >```
-    >클러스터 중심에서 거리가 가장 가까운 샘플들을 평균값으로 중심을 이동하면서 그룹화
+    >클러스터 중심에서 거리가 가장 가까운 샘플들의 평균값으로 중심을 이동하면서 그룹화
     >
     >최적화: 엘보우 계수 변화 최대
     >
@@ -369,7 +372,7 @@
 
 + ### 모델 학습
     ```angular2html
-    모델(회귀, 분류, ...) 선택
+    모델(회귀, 분류, 군집) 선택
     ```
 
 + ### 모델 성능 조절
