데이터 전처리 - 공부

--- a/□ 싸이킷런.md
+++ b/□ 싸이킷런.md
@@ -74,8 +74,8 @@ warnings.filterwarnings('ignore')
     (테이블)변수.data              # 특성 
     (테이블)변수.feature_names     # 특성 이름
     
-    (테이블)변수.target            # 타겟
-    (테이블)변수.target_names      # 타겟 이름
+    (테이블)변수.target            # 타겟(인덱스)
+    (테이블)변수.target_names      # 타겟 이름(인덱스)
     ```
 
 + ### 정보
