--- a/데이터 전처리1/◆ 3. 통계, 그래프.md
+++ b/데이터 전처리1/◆ 3. 통계, 그래프.md
@@ -1,18 +1,16 @@
-# 통계
+># 통계
+>### 정보, 속성, GROUP BY, 시각화
 ```
 count  sum  mean  min  max  var
-
 mode-최빈값   median-중앙값  std-표준편차
-
 kurtosis-첨도    skew-왜도
-
 cov: 공분산   corr: 상관관계  cumsum: 누적합  cumprod: 누적곱
 ```
 ---
 
 ## 정보
 ```
-(테이블)변수.describe()　　# 개수, 평균, 표준편차, 최소, 4분위, 최대
+(테이블)변수.describe().transpose()    # 개수, 평균, 표준편차, 최소, 4분위, 최대
 ```
 
 ## 속성    
@@ -35,9 +33,9 @@ cov: 공분산   corr: 상관관계  cumsum: 누적합  cumprod: 누적곱
     ``` 
 + ### 일반(stack)
     ```
-    (테이블)변수.groupby( ['속성_리스트'] )['속성_리스트']
-      .agg( ['통계_리스트']
-      [.reset_index()]    # 인덱스 초기화
+    (테이블)변수.groupby( ['속성_리스트'] )['속성']\
+        .agg( ['통계_리스트'] )
+    #   .reset_index()    # 인덱스 초기화
       )
     ```
 + ### 피봇(unstack)
