--- a/모델 학습＆평가＆성능 조절/지도 학습 - 분류.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 분류.md
@@ -249,13 +249,13 @@ from sklearn.metrics import 성능지표
 from sklearn.metrics import roc_auc_score       # AUC
 
 # 테스트 데이터 → 예측
-# ypred = (분류)변수.predict(xtest)         # 이산 예측값
-ypred = (분류)변수.predict(xtest_scaled)    # 이산 예측값(스케일링)
+# pred = (분류)변수.predict(xtest)         # 이산 예측값
+pred = (분류)변수.predict(xtest_scaled)    # 이산 예측값(스케일링)
 
 # 평가
-confusion_matrix(ytest, ypred)   # 오차 행렬
-성능지표(ytest, ypred)            # 성능 지표
-roc_auc_score(ytest, ypred)      # AUC
+confusion_matrix(ytest, pred)   # 오차 행렬
+성능지표(ytest, pred)            # 성능 지표
+roc_auc_score(ytest, pred)      # AUC
 
 # (분류)변수.predict( [[값??]] )            # 타겟 예측
 # (분류)변수.predict_proba( [[값??]] )      # 타겟 예측 확률값
