--- a/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
@@ -117,14 +117,14 @@
 테스트 데이터 → 예측 → 평가
 ```
 # 테스트 데이터 → 예측
-ypred = (회귀)변수.predict( np.array(xtest.reshape(-1,1)) )         # 이산 예측값
+pred = (회귀)변수.predict( np.array(xtest.reshape(-1,1)) )         # 이산 예측값
 
 # 평가
 from sklearn.metrics import mean_squared_error, r2_score
 
-mse = mean_squared_error(ytest, ypred)       # 평균 제곱 오차
+mse = mean_squared_error(ytest, pred)       # 평균 제곱 오차
 rmse = np.sqrt(mse)                          # 루트 평균 제곱 오차
-r2 = r2_score(ytest, ypred)                  # 결정계수(≒정확도)
+r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
 
 # (회귀)변수.predict( [ [값??] ] )            # 타겟 예측
 # (회귀)변수.predict_proba( [[값??]] )        # 타겟 예측 확률값
