데이터 전처리 - 공부

--- a/데이터 전처리2/결측치, 범주형 데이터.md
+++ b/데이터 전처리2/결측치, 범주형 데이터.md
@@ -27,9 +27,17 @@
 ```
 from sklearn.preprocessing import LabelEncoder
 
-le = LabelEncoder()     # 레이블 인코더 생성
+def label_encoder(table):
+  
+    le = LabelEncoder()    # 라벨 인코더 생성
 
-label = le.fit_transform( 테이블['속성'].values )  # 훈련 데이터 → 모델 → 학습 데이터
+    features = ['속성_리스트']
+    for feature in features:
+        table[feature] = le.fit_transform( table[feature] )
+    
+    return table
+
+(테이블)변수 = label_encoder( (테이블)변수 )    
 ```
 ## 명목 데이터
 문자 → 인덱스 → 행렬
