데이터 전처리 - 공부

--- a/데이터 전처리1/◆ 2. 데이터 검색, 수정, 삭제.md
+++ b/데이터 전처리1/◆ 2. 데이터 검색, 수정, 삭제.md
@@ -134,8 +134,9 @@ pd.options.display.float_format = '{:,.2f}'.format
 ## 데이터 삭제
 ```
 (테이블)변수.drop(
-  [인덱스_리스트]/['속성_리스트']    # 행/열
-  [, axis=1]    # 열
-  [, inplace=True]    # 저장
-  )
+#   [인덱스_리스트]       # 인덱스
+    ['속성_리스트']    
+    , axis = 1          # 열
+    , inplace = True    # 저장
+    )
 ```
