오차 행렬 - 공부

--- a/□ 싸이킷런.md
+++ b/□ 싸이킷런.md
@@ -53,7 +53,7 @@ from scipy.stats import uniform, randint
 # 평가
 from sklearn.metrics import confusion_matrix
 from sklearn.metrics import accuracy_score, precision_score, recall_score
-from sklearn.metrics import roc_auc_score
+from sklearn.metrics import f1_score, roc_auc_score
 
 from sklearn.metrics import mean_squared_error, r2_score
 
