--- a/모델 학습＆평가＆성능 조절/지도 학습 - 분류.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 분류.md
@@ -222,25 +222,30 @@ from sklearn.metrics import confusion_matrix    # 오차 행렬
 from sklearn.metrics import 성능지표
 from sklearn.metrics import roc_auc_score       # AUC
 
-# 테스트 데이터 → 예측
-# pred = (분류)변수.predict(xtest)         # 이산 예측값
-pred = (분류)변수.predict(xtest_scaled)    # 이산 예측값(스케일링)
+# 테스트 데이터 → 모델
+# pred = (분류)변수.predict(xtest)         # 타겟 예측값
+pred = (분류)변수.predict(xtest_scaled)    # 타겟 예측값(스케일링)
+
+# (분류)변수.predict_proba(xtest[: 1])       # 타겟(양성) 예측 확률값
+# (분류)변수.predict_proba(xtest[: 0])       # 타겟(음성) 예측 확률값
 
 # 평가
-confusion_matrix(ytest, pred)    # 오차 행렬
-성능지표(ytest, pred)             # 성능 지표
-roc_auc_score(ytest, pred)       # AUC
+def eval(ytest, pred=None):
+    confusion = confusion_matrix(ytest, pred)    # 오차 행렬
+    accuracy = accuracy_score(ytest, pred)       # 정확도
+    precision = precision_score(ytest, pred)     # 정밀도
+    recall = recall_score(ytest, pred)           # 재현율
+    f1 = f1_score(ytest,pred)                    # F1
+    roc_auc = roc_auc_score(ytest, pred)         # AUC
 
-# (분류)변수.predict( [[값??]] )            # 타겟 예측
-# (분류)변수.predict_proba( [[값??]] )      # 타겟 예측 확률값
+    print('오차행렬')
+    print(confusion)
+    print()
+    print(f'정확도: {accuracy}, 정밀도: {precision}, 재현율: {recall}')
+    print(f'F1: {f1}, AUC: {roc_auc}')
+
+eval(ytest, pred)   # 성능 지표
 ```
-
-+ ### 성능 지표
-    ```angular2html
-    accuracy_score      # 정확도
-    precision_score     # 정밀도
-    recall_score        # 재현율
-    ```
 
 + ### ROC 곡선
     ```
