--- a/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
@@ -114,9 +114,9 @@
 
 ---
 ## 모델 평가
-테스트 데이터 → 예측 → 평가
+테스트 데이터 → 모델 → 평가
 ```
-# 테스트 데이터 → 예측
+# 테스트 데이터 → 모델
 pred = (회귀)변수.predict( np.array(xtest.reshape(-1,1)) )         # 이산 예측값
 
 # 평가
