--- a/데이터 전처리1/◆ 1. 테이블 저장, 열기, 생성, 변경.md
+++ b/데이터 전처리1/◆ 1. 테이블 저장, 열기, 생성, 변경.md
@@ -19,7 +19,7 @@
 ## 열기 ★
 ```angular2html
 (테이블)변수 = pd.read_csv(
-    './파일 이름.csv'
+    './상위폴더/파일 이름.csv'
 #   , encoding='uft8'    # 한글
 #   , header='None'      # 헤더 X
     )
