--- a/데이터 전처리1/◆ 3. 통계, 그래프.md
+++ b/데이터 전처리1/◆ 3. 통계, 그래프.md
@@ -10,7 +10,7 @@ cov: 공분산   corr: 상관관계  cumsum: 누적합  cumprod: 누적곱
 
 ## 정보
 ```
-(테이블)변수.describe().transpose()    # 개수, 평균, 표준편차, 최소, 4분위, 최대
+(테이블)변수.describe()    # 개수, 평균, 표준편차, 최소, 4분위, 최대
 ```
 
 ## 속성    
