--- a/학습 종류 - 사례 기반, 모델 기반.md
+++ b/학습 종류 - 사례 기반, 모델 기반.md
@@ -7,33 +7,19 @@
 ## 모델 기반 학습
 기존 데이터로 `모델`을 만든 후, 새로운 데이터를 `예측`하는 학습
 ```angular2html
-- 모델 파라미터: 모델 학습 변수(자동)
+- 하이퍼 파라미터: 모델 성능 조절 변수(수동)
+- 모델 파라미터: 모델 훈련 변수(자동)
 ▶ 가중치: 중요도
 ▶ 편향: 추가 버프
 
-- 하이퍼 파라미터: 모델 성능 조절 변수(수동)
+- 손실 함수: 데이터에서 샘플 한 개에 대한 '손실'
+  = 오차(실제값 - 예측값)
+
+- 비용 함수: 데이터에서 모든 샘플에 대한 '손실'의 합
+  = 오차(실제값 - 예측값) 합
 ```
 + ### 모델 훈련
   `비용 함수`를 `최소화`하는 `모델 파라미터`를 찾는 것
-  ```
-  - 가중치: 중요도
-  - 편향: 추가 버프
-  
-  - 최적화: 오차(실제값-예측값)를 최소화하는 가중치＆편향
-  ```
-
-  >효용 함수(utility function)
-  >```
-  >모델이 얼마나 좋은지를 나타내는 지표
-  >```
-  >
-  >비용 함수(cost function) ★
-  >```
-  >모델이 얼마나 나쁜지를 나타내는 지표
-  >
-  >손실 함수: 훈련 데이터에서 샘플 한 개에 대한 손실
-  >비용 함수: 훈련 데이터에서 모든 샘플에 대한 손실의 합
-  >```
 
 + ### 모델 성능 조절
   ### 지도 학습
