--- a/학습 종류 - 사례 기반, 모델 기반.md
+++ b/학습 종류 - 사례 기반, 모델 기반.md
@@ -23,9 +23,9 @@
 
 + ### 모델 성능 조절
   ### 지도 학습
-  >K-겹 교차 검증
+  >K-겹 교차 검증(K-fold Cross Validation)
   >```
-  >중복을 허용하지 않고 훈련 데이터를 임의의 K개로 분할(K-fold Cross Validation)
+  >중복을 허용하지 않고 훈련 데이터를 임의의 K개로 분할
   >
   >훈련 데이터: K-1개 + 검증 데이터: 1개
   >→ 모델 학습 → 모델 평가
