데이터 전처리 - 심화

--- a/데이터 전처리.md
+++ b/데이터 전처리.md
@@ -1,7 +1,8 @@
 ># 데이터 전처리
+>### 결측치, 범주형 데이터
 >### 데이터 분할, 스케일링
 >### 특성 공학
->
+
 ```angular2html
 - 행
   ▶ 샘플
@@ -13,6 +14,29 @@
 - 샘플링 잡음: 샘플의 '개수'가 적어서 대표성을 띠지 못하는 것(sampling noise)
 - 샘플링 편향: 샘플의 '표본 추출 방법'이 잘못되서 대표성을 띠지 못하는 것(sampling bias)
 ```
+---
+## 결측치
+누락된 데이터(Not Available)
+```
+NaN(float), None(object), null, NA(int)
+```
+
+## 범주형 데이터
++ ### 순서 데이터
+  문자 → 인덱스
+
++ ### 명목 데이터
+  문자 → 행렬
+  >### 원-핫 인코딩
+  >배열: 타겟 = 1, 나머지 = 0
+  >
+  >```
+  >단어         단어 인덱스       원핫 벡터
+  >
+  >단어1            0           [1, 0, 0]
+  >단어2            1           [0, 1, 0]
+  >단어3            2           [0, 0, 1]
+  >```
 
 ---
 ## 데이터 분할
