--- a/데이터 전처리1/◆ 2. 데이터 검색, 수정, 삭제.md
+++ b/데이터 전처리1/◆ 2. 데이터 검색, 수정, 삭제.md
@@ -10,9 +10,9 @@ https://chl9413.tistory.com/54
 import pandas as pd
 import pandasql as pql
 
-(테이블)변수 = pd.read_csv('[상위폴더/]파일_이름.csv')
-df = pd.DataFrame( (테이블)변수 )
-pql.sqldf('SQL 코드')     # 테이블 = (테이블)변수
+테이블_변수 = pd.read_csv('[상위폴더/]파일_이름.csv')
+df = pd.DataFrame( 테이블_변수 )
+pql.sqldf('SQL 코드')     # 테이블 = 테이블_변수
 ```
 ---
 ## 데이터 검색
@@ -23,7 +23,7 @@ pd.options.display.float_format = '{:,.2f}'.format
 ```
 ### 테이블 1개
 ```
-(테이블)변수
+테이블_변수
     [조건]
     [.groupby('속성_리스트').agg( ['통계_리스트']]
     [ ['속성_리스트'] ]
@@ -32,81 +32,84 @@ pd.options.display.float_format = '{:,.2f}'.format
 
 + ### 정보
   ```
-  (테이블)변수               # 테이블
-  (테이블)변수.values        # 데이터(numpy array) ★
-  (테이블)변수.head/tail(n)  # 앞/뒤 n행
+  테이블_변수               # 테이블
+  테이블_변수.values        # 데이터(numpy array) ★
+  테이블_변수.head/tail(n)  # 앞/뒤 n행
   
-  (테이블)변수.info()    # 속성, 결측치, 속성_타입
-  (테이블)변수.dtypes    # 속성, 자료형
+  테이블_변수.info()    # 속성, 결측치, 속성_타입
+  테이블_변수.dtypes    # 속성, 자료형
   
-  (테이블)변수.shape　　　 # 행,열 개수
-  (테이블)변수.ndim　　　　# 차원(dim)
-  (테이블)변수.size　　　　# 행X열 수
-  (테이블)변수.T          # 전치
+  테이블_변수.shape　　　 # 행,열 개수
+  테이블_변수.ndim　　　　# 차원(dim)
+  테이블_변수.size　　　　# 행X열 수
+  테이블_변수.T          # 전치
   ```
 
 
 + ### 속성 ★
   >``loc`` : 인덱스, 문자　　　　``iloc`` : 인덱스, 인덱스<br>
   >```
-  >(테이블)변수.loc/iloc[ 행 범위, 열 범위 ]
+  >테이블_변수.loc/iloc[ 행 범위, 열 범위 ]
   >```
   >---
   >1개
   >```
-  >(테이블)변수.속성
+  >테이블_변수.속성
   >
-  >(테이블)변수['속성']  ★
-  >(테이블)변수.loc[:, '속성']  ★
+  >테이블_변수['속성']  ★
+  >테이블_변수.loc[:, '속성']  ★
   >
-  >(테이블)변수.iloc[:, (열)인덱스]
+  >테이블_변수.iloc[:, (열)인덱스]
   >```
   >2개 이상
   >```
-  >(테이블)변수[ ['속성_리스트'] ]  ★    
-  >(테이블)변수.loc[:, ['속성_리스트'] ]  ★  # 불연속
-  >(테이블)변수.loc[:, '속성1':'속성n' ]  ★  # 연속
+  >테이블_변수[ ['속성_리스트'] ]  ★    
+  >테이블_변수.loc[:, ['속성_리스트'] ]  ★  # 불연속
+  >테이블_변수.loc[:, '속성1':'속성n' ]  ★  # 연속
   >
-  >(테이블)변수.iloc[:, [인덱스_리스트] ]  # 불연속
-  >(테이블)변수.iloc[:, 인덱스1:인덱스n]   # 연속
+  >테이블_변수.iloc[:, [인덱스_리스트] ]  # 불연속
+  >테이블_변수.iloc[:, 인덱스1:인덱스n]   # 연속
   >```
   >자료형
   >``` 
-  >(테이블)변수['속성'].astype('속성_타입')
+  >테이블_변수['속성'].astype('속성_타입')
   >```
 
 + ### 조건
     >1개
     >```
-    >(테이블)변수[조건][ ['속성_리스트'] ]
+    >테이블_변수[조건][ ['속성_리스트'] ]
     >
-    >(테이블)변수.loc[조건, ['속성_리스트'] ]
+    >테이블_변수.loc[조건, ['속성_리스트'] ]
     >```
     >2개 이상
     >```
-    >(테이블)변수[ (조건1) &/| ... &/| (조건n) ]
+    >테이블_변수[ (조건1) &/| ... &/| (조건n) ]
     >
-    >(테이블)변수.loc[ (조건1) &/| ... &/| (조건n) ]
+    >테이블_변수.loc[ (조건1) &/| ... &/| (조건n) ]
     >```
   
 + ### ORDER BY
   >같은 정렬
   >```
-  >(테이블)변수.sort_values(
-  >    by=['속성n', '속성m']
-  >    , ascending=True/False)    # 오름차순/내림차순
+  >테이블_변수.sort_values(
+  >    by = ['속성n', '속성m']
+  >    , ascending = True/False    # 오름차순/내림차순
+  >    )    
   >```
   >다른 정렬
   >```
-  >(테이블)변수.sort_values( by=['속성n', '속성m']
-  >    , ascending=[True/False, True/False] )
+  >테이블_변수.sort_values( 
+  >    by=['속성n', '속성m']
+  >    , ascending=[True/False, True/False]    # 오름차순/내림차순
+  >    )
   >```
   
 
 ### 테이블 2개
 ```
-(테이블)변수 = merge(
-    (테이블)변수1, (테이블)변수2
+테이블_변수 = merge(
+    테이블_변수1, 테이블_변수2
     [, how='inner/outer']
     ) 
 ```
@@ -114,7 +117,7 @@ pd.options.display.float_format = '{:,.2f}'.format
 ## 데이터 수정
 + ### 조건문
     ```angular2html
-    (테이블)변수['속성'].apply(
+    테이블_변수['속성'].apply(
         lamda x: (수정)데이터1 if 조건식 else (수정)데이터2) 
     ```
 + ### 다중조건문
@@ -128,12 +131,12 @@ pd.options.display.float_format = '{:,.2f}'.format
      else:
         실행문
   
-  (테이블)변수['속성'].apply(함수)
+  테이블_변수['속성'].apply(함수)
   ```
   
 ## 데이터 삭제
 ```
-(테이블)변수.drop(
+테이블_변수.drop(
 #   [인덱스_리스트]       # 인덱스
     ['속성_리스트']    
     , axis = 1          # 열
