--- a/데이터 전처리2/결측치, 범주형 데이터.md
+++ b/데이터 전처리2/결측치, 범주형 데이터.md
@@ -1,80 +1,55 @@
-># 결측치
->누락된 데이터(Not Available)
->```
->NaN(float), None(object), null, NA(int)
->```
-## 확인
-```angular2html
-(테이블)변수.isnull().sum()
-# (테이블)변수.isnull().sum().sum()
-```
+## 결측치
++ ### 확인
+    ```angular2html
+    테이블_변수.isnull().sum()
+    # 테이블_변수.isnull().sum().sum()
+    ```
 
-## 대체
-```angular2html
-(테이블)변수['속성'].fillna(대체값, inplace=True)
-```
++ ### 대체
+    ```angular2html
+    테이블_변수['속성'].fillna(대체값, inplace=True)
+    ```
 
-## 삭제
-```
-(테이블)변수.dropna(inplace=True)            # 행
-(테이블)변수.dropna(inplace=True, axis=1)    # 열
-```
++ ### 삭제
+    ```
+    테이블_변수.dropna(inplace=True)            # 행
+    테이블_변수.dropna(inplace=True, axis=1)    # 열
+    ```
+
 ---
-># 범주형(질적) 데이터
->### 순서, 명목
-## 순서 데이터
-문자 → 인덱스
-```
-from sklearn.preprocessing import LabelEncoder
-
-def label_encoder(table):
-  
-    le = LabelEncoder()    # 라벨 인코더 생성
-
-    features = ['속성_리스트']
-    for feature in features:
-        table[feature] = le.fit_transform( table[feature] )
-    
-    return table
-
-(테이블)변수 = label_encoder( (테이블)변수 )    
-```
-## 명목 데이터
-문자 → 인덱스 → 행렬
-+ ### 원핫 인코딩
-  배열: 타겟 = 1, 나머지 = 0
+## 범주형(질적) 데이터
++ ### 순서 데이터
+    문자열 → 인덱스
     ```
-    단어         단어 인덱스      원핫 벡터
+    from sklearn.preprocessing import LabelEncoder
     
-    단어1            0           [1, 0, 0]
-    단어2            1           [0, 1, 0]
-    단어3            2           [0, 0, 1]
+    def label_encoder(table):
+      
+        le = LabelEncoder()    # 라벨 인코더 생성
+    
+        features = ['속성_리스트']
+        for feature in features:
+            table[feature] = le.fit_transform( table[feature] )    # 문자열 → 인덱스
+        
+        return table
+    
+    테이블_변수 = label_encoder( 테이블_변수 )    
     ```
-
-    >### Sklearn
-    >  문자 → 인덱스
-    >```
-    >from sklearn.preprocessing import LabelEncoder
-    >
-    >le = LabelEncoder()     # 레이블 인코더 생성
-    >
-    >label = le.fit_transform( 테이블['속성'].values )  # 훈련 데이터 → 모델 → 학습 데이터
-    >```
-    >
-    >인덱스 → 행렬
++ ### 명목 데이터
+    문자열 → 행렬
+    >Sklearn
     >```
     >from sklearn.preprocessing import OneHotEncoder
     >
-    >label = label.reshape(-1,1)     # Numpy: 1열 ＆ 행(자동)
+    >ohe = OneHotEncoder()    # 원-핫 인코더 생성
     >
-    >ohe = OneHotEncoder()           # 원핫 인코더 생성
+    >onehot = ohe.fit_transform( 테이블_변수[['속성']] )   # 문자열 → 행렬
     >
-    >onehot = ohe.fit_transform(label)   # 훈련 데이터 → 모델 → 학습 데이터
-    >
-    ># onehot.toarray()     # 확인용
+    >onehot.toarray()[:5]    # 행렬 
+    ># ohe.categories_       # 문자열
     >```
-    >---
-    >### Pandas
+    >
+    >Pandas
     >```
-    >pd.get_dummies( (테이블)변수['속성_리스트'] )
+    >pd.get_dummies( 테이블_변수['속성_리스트'] )
     >```
