--- a/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
@@ -4,14 +4,14 @@
 ## 모델 생성＆학습
 훈련 데이터 → 모델
 ```
-(회귀)변수 = 모델     # 모델 생성
+회귀_변수 = 모델     # 모델 생성
 
 # ★모델 성능 조절★
 
-(회귀)변수.fit( xtrain, ytrain )    # 모델 학습
+회귀_변수.fit( xtrain, ytrain )    # 모델 학습
 
-# (회귀)변수.score( xtrain, ytrain )    # 훈련 데이터 결정계수(≒정확도)
-# (회귀)변수.score( xtest, ytest )      # 테스트 데이터 결정계수(≒정확도)
+# 회귀_변수.score( xtrain, ytrain )    # 훈련 데이터 결정계수(≒정확도)
+# 회귀_변수.score( xtest, ytest )      # 테스트 데이터 결정계수(≒정확도)
 ```
 + 모델
   >K-최근접 이웃 회귀 - knr
@@ -117,7 +117,7 @@
 테스트 데이터 → 모델 → 평가
 ```
 # 테스트 데이터 → 모델
-pred = (회귀)변수.predict( np.array(xtest.reshape(-1,1)) )         # 이산 예측값
+pred = 회귀_변수.predict( np.array(xtest.reshape(-1,1)) )         # 이산 예측값
 
 # 평가
 from sklearn.metrics import mean_squared_error, r2_score
@@ -126,8 +126,8 @@ mse = mean_squared_error(ytest, pred)       # 평균 제곱 오차
 rmse = np.sqrt(mse)                          # 루트 평균 제곱 오차
 r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
 
-# (회귀)변수.predict( [ [값??] ] )            # 타겟 예측
-# (회귀)변수.predict_proba( [[값??]] )        # 타겟 예측 확률값
+# 회귀_변수.predict( [ [값??] ] )            # 타겟 예측
+# 회귀_변수.predict_proba( [[값??]] )        # 타겟 예측 확률값
 ```
 
 ---
@@ -139,7 +139,7 @@ r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
     # kf = KFold(n_splits = k, shuffle=True)
 
     scores = cross_validate(
-        (회귀)변수
+        회귀_변수
         , xtrain, ytrain               # 특성, 타겟
     #   , xtrain_scaled, ytrain        # 특성(스케일링), 타겟
         , scoring = 'r2'               # 평가 지표(결정계수)
@@ -166,7 +166,7 @@ r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
         }
     
     gscv = GridSearchCV(
-        (회귀)변수       # 모델
+        회귀_변수       # 모델
         , params        # 하이퍼 파라미터 목록
         , cv = 5        # 교차 검증 횟수(K번)
         , scoring = 'accuracy'         # 평가 지표(정확도)
@@ -177,7 +177,7 @@ r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
     # gscv.fit(xtrain, ytrain)
     gscv.fit(xtrain_scaled, ytrain)
   
-    (회귀)변수 = gscv.best_estimator_    # 하이퍼 파라미터 최적화 값 저장
+    회귀_변수 = gscv.best_estimator_    # 하이퍼 파라미터 최적화 값 저장
     gscv.best_params_    # 하이퍼 파라미터 최적화 값
     
     # gscv.cv_results_['mean_train_score']    # 하이퍼 파라미터 훈련 데이터 정확도
@@ -199,7 +199,7 @@ r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
         }
     
     rscv = RandomizedSearchCV(
-        (회귀)변수         # 모델
+        회귀_변수         # 모델
         , params          # 하이퍼 파라미터 목록
         , n_iter = 10     # 난수 생성 횟수
         , cv = 5          # 교차 검증 횟수(K번)
@@ -211,7 +211,7 @@ r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
     # rscv.fit(xtrain, ytrain)
     rscv.fit(xtrain_scaled, ytrain)
   
-    (회귀)변수 = rscv.best_estimator_    # 하이퍼 파라미터 최적화 값 저장
+    회귀_변수 = rscv.best_estimator_    # 하이퍼 파라미터 최적화 값 저장
     rscv.best_params_  # 하이퍼 파라미터 최적화 값
     
     # rscv.cv_results_['mean_train_score']    # 하이퍼 파라미터 훈련 데이터 정확도
