--- a/데이터 전처리1/★ 그래프 - 속성.md
+++ b/데이터 전처리1/★ 그래프 - 속성.md
@@ -74,8 +74,8 @@ plt.plot( (리스트)변수n-1, (리스트)변수n-2, label='범례n')
                 
 plt.legend(
     ncol = 1             # 정렬(1: 가로, 2: 세로)
-#   , loc = '위치'       # 위치
-#   , fontsize = 크기    # 크기
+#   , loc = '위치'       
+#   , fontsize = 크기    
 
 #   , frameon = True     # 테두리
 #   , shadow = True      # 테두리 그림자
