머신러닝 + 데이터분석 폴더 분리

--- a/데이터 전처리/결측치, 범주형 데이터.md
+++ b/데이터 전처리/결측치, 범주형 데이터.md
@@ -1,20 +1,47 @@
 ## 결측치
-+ ### 확인
-    ```angular2html
-    테이블_변수.isnull().sum()
-    # 테이블_변수.isnull().sum().sum()
-    ```
 
-+ ### 대체
-    ```angular2html
-    테이블_변수['속성'].fillna(대체값, inplace=True)
-    ```
++ ### Sklearn ★
+  ```
+  from sklearn.impute import SimpleImputer
 
-+ ### 삭제
-    ```
-    테이블_변수.dropna(inplace=True)            # 행
-    테이블_변수.dropna(inplace=True, axis=1)    # 열
-    ```
+  si = SimpleImputer(
+      strategy = "median"    # 대체값(median: 중앙값, most_frequent: 최빈값)
+      )    
+  
+  # 범주형 속성 제외
+  테이블_변수_num = housing.drop('범주형_속성', axis = 1)    # 범주형 속성 제외
+  
+  X = si.fit(테이블_변수_num)    # 훈련
+  
+  si.statistics_    # 대체값
+  
+  # 대체값 테이블 적용
+  테이블_변수_si = pd.DataFrame(
+      X
+      , columns = 테이블_변수_num.columns
+      , index = 테이블_변수_num.index
+      )
+  ```
+
+
+
++ ### Pandas
+  >확인
+  >```
+  >테이블_변수.isnull().sum()
+  ># 테이블_변수.isnull().sum().sum()
+  >```
+  >
+  >대체
+  >```
+  >테이블_변수['속성'].fillna(대체값, inplace=True)
+  >```
+  >삭제
+  >```
+  >테이블_변수.dropna(inplace=True)            # 행
+  >테이블_변수.dropna(inplace=True, axis=1)    # 열
+  >```
+  
 
 ---
 ## 범주형(질적) 데이터
