--- a/학습 종류 - 사례 기반, 모델 기반.md
+++ b/학습 종류 - 사례 기반, 모델 기반.md
@@ -92,12 +92,11 @@
   >  ▶ 기준값(threshold)
   >```
   >
-  ### 회귀: 
+  ### 회귀
+  >성능 지표: 평균 제곱근 오차, 평균 절대 오차
   >```
-  >부부부종류2
-  >
+  >평균 제곱근 오차(RMSE): root( 1/n x ∑오차² )
+  >평균 절대 오차(MAE): 1/n x ( ∑ㅣ오차ㅣ )
   >```
-
-
-
+  
 
