파이프라인

--- a/데이터 전처리/결측치, 범주형 데이터.md
+++ b/데이터 전처리/결측치, 범주형 데이터.md
@@ -5,7 +5,7 @@
   from sklearn.impute import SimpleImputer
 
   si = SimpleImputer(
-      strategy = "median"    # 대체값(median: 중앙값, most_frequent: 최빈값)
+      strategy = '대체값'    # median: 중앙값, most_frequent: 최빈값
       )    
   
   # 범주형 속성 제외
