파이프라인

--- a/데이터 전처리/● 파이프라인.md
+++ b/데이터 전처리/● 파이프라인.md
@@ -1,9 +1,3 @@
-># 파이프라인
->### 수치형(결측치 + 특성 추출 + 스케일링)
->### 범주형
-
-
-
 ## 파이프라인
 수치형(결측치 + 특성 추출 + 스케일링) + 범주형(원-핫 인코딩)
 ```angular2html
@@ -30,6 +24,6 @@ pipeline_ct = ColumnTransformer([
 테이블_변수_ct = pipeline_ct.fit_transform(테이블_변수)    # 파이프라인 적용
 
 pipeline_ct    # 파이프라인
-테이블_변수_c
+테이블_변수_ct
 ```
 
