파이프라인

--- a/데이터 전처리/● 파이프라인.md
+++ b/데이터 전처리/● 파이프라인.md
@@ -23,7 +23,7 @@ pipeline_ct = ColumnTransformer([
 
 테이블_변수_ct = pipeline_ct.fit_transform(테이블_변수)    # 파이프라인 적용
 
-pipeline_ct    # 파이프라인
-테이블_변수_ct
+pipeline_ct        # 파이프라인
+# 테이블_변수_ct    # 전처리 데이터
 ```
 
