--- a/□ 싸이킷런.md
+++ b/□ 싸이킷런.md
@@ -12,8 +12,11 @@ import matplotlib.pyplot as plt
 #   pip install lightgbm
 
 # 데이터 전처리
+from sklearn.impute import SimpleImputer
 from sklearn.preprocessing import StandardScaler, MinMaxScaler
 from sklearn.preprocessing import LabelEncoder, OneHotEncoder
+from sklearn.pipeline import Pipeline
+from sklearn.compose import ColumnTransformer
 from sklearn.model_selection import train_test_split
 from sklearn.decomposition import PCA
 
