--- a/데이터 전처리/● 파이프라인.md
+++ b/데이터 전처리/● 파이프라인.md
@@ -5,8 +5,12 @@ from sklearn.pipeline import Pipeline
 from sklearn.compose import ColumnTransformer
 
 from sklearn.impute import SimpleImputer
+from sklearn.preprocessing import StandardScaler
 
-테이블_변수_num = 테이블_변수.drop(['범주형_속성_리스트'], axis=1)    # 수치형 테이블
+
+테이블_변수_data = 테이블_변수.drop('타겟', axis=1)    # 특성
+
+테이블_변수_num = 테이블_변수_data.drop('범주형_속성_리스트', axis=1)    # 수치형 테이블
 테이블_변수_cat = ['범주형_속성_리스트']    # 범주형 속성
 
 pipeline_num = Pipeline([
@@ -17,13 +21,14 @@ pipeline_num = Pipeline([
     ])
 
 pipeline_ct = ColumnTransformer([
-    ( 'num', pipeline_num, list(테이블_변수_num) ),      # ('이름', '파이프라인', '속성_리스트')
-    ( 'cat', OneHotEncoder(), 테이블_변수_cat ),    # 범주형 데이터
+    ( 'num', pipeline_num, list(테이블_변수_num) ),    # ('이름', '파이프라인', '속성_리스트')
+    ( 'cat', OneHotEncoder(), 테이블_변수_cat ),       # 범주형 데이터
 ])
 
-테이블_변수_ct = pipeline_ct.fit_transform(테이블_변수)    # 파이프라인 적용
+data = pipeline_ct.fit_transform(테이블_변수_data)    # 특성(데이터 전처리)
+target = 테이블_변수['타겟']    # 타겟
 
-pipeline_ct        # 파이프라인
-# 테이블_변수_ct    # 전처리 데이터
+pipeline_ct    # 파이프라인
+# data         # 전처리 데이터
 ```
 
