--- a/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
@@ -116,18 +116,22 @@
 ## 모델 평가
 테스트 데이터 → 모델 → 평가
 ```
+from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score
+
 # 테스트 데이터 → 모델
-pred = 회귀_변수.predict( np.array(xtest.reshape(-1,1)) )         # 이산 예측값
+pred = 회귀_변수.predict( np.array(xtest.reshape(-1,1)) )    # 이산 예측값
 
 # 평가
-from sklearn.metrics import mean_squared_error, r2_score
+mae = mean_absolute_error(ytest, pred)    # 평균 절대 오차
+mse = mean_squared_error(ytest, pred)     # 평균 제곱 오차
+rmse = np.sqrt(mse)                       # 평균 제곱근 오차
+r2 = r2_score(ytest, pred)                # 결정계수(≒정확도)
 
-mse = mean_squared_error(ytest, pred)       # 평균 제곱 오차
-rmse = np.sqrt(mse)                         # 평균 제곱근 오차
-r2 = r2_score(ytest, pred)                  # 결정계수(≒정확도)
+print(f'평균 절대 오차: {mae}, 평균 제곱근 오차: {rmse}')
+print(f'결정계수: {r2}')
 
-# 회귀_변수.predict( [ [값??] ] )            # 타겟 예측
-# 회귀_변수.predict_proba( [[값??]] )        # 타겟 예측 확률값
+# 회귀_변수.predict( [ [값??] ] )           # 타겟 예측
+# 회귀_변수.predict_proba( [[값??]] )       # 타겟 예측 확률값
 ```
 
 ---
