계층적 샘플링 - 추가

--- a/데이터 전처리.md
+++ b/데이터 전처리.md
@@ -13,6 +13,7 @@
 
 - 샘플링 잡음: 샘플의 '개수'가 적어서 대표성을 띠지 못하는 것(sampling noise)
 - 샘플링 편향: 샘플의 '표본 추출 방법'이 잘못되서 대표성을 띠지 못하는 것(sampling bias)
+  ▶ 계층적 샘플링: (범주형)속성 비율(기존 데이터 = 훈련＆테스트 데이터)
 ```
 ---
 ## 결측치
