--- a/데이터 전처리/데이터 분할, 스케일링, 차원 축소.md
+++ b/데이터 전처리/데이터 분할, 스케일링, 차원 축소.md
@@ -1,5 +1,5 @@
 ## 데이터 분할
-
+훈련 + 테스트
 + ### 분류
     ```
     from sklearn.model_selection import train_test_split
@@ -9,9 +9,9 @@
     
     xtrain, xtest, ytrain, ytest = train_test_split(
      
-        data, target             # x: 특성, y: 타겟
+        data, target             # 특성, 타겟
         , test_size = 0.25       # 테스트 데이터 비율(0~1)
-        , stratify = target      # 훈련 데이터 클래스 비율 = 테스트 데이터 클래스 비율
+    #   , stratify = 테이블_변수['범주형_속성']    # 계층적 샘플링
         , random_state = 숫자    # 랜덤 시드
         )
         
@@ -27,8 +27,9 @@
     
     xtrain, xtest, ytrain, ytest = train_test_split(
      
-        data, target             # x: 독립변수, y: 종속변수
+        data, target             # 특성, 타겟
         , test_size = 0.25       # 테스트 데이터 비율(0~1)
+    #   , stratify = 테이블_변수['범주형_속성']    # 계층적 샘플링
         , random_state = 숫자    # 랜덤 시드
         )
     
