--- a/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
+++ b/모델 학습＆평가＆성능 조절/지도 학습 - 회귀.md
@@ -164,16 +164,16 @@ print(f'결정계수: {r2}')
     from sklearn.model_selection import GridSearchCV
 
     params = {
-        '하이퍼 파라미터1': np.arange(시작값, 종료값+1, 증가값),
+        '하이퍼_파라미터1': np.arange(시작값, 종료값+1, 증가값),
                    ...
-        '하이퍼 파라미터n': np.arange(시작값, 종료값+1, 증가값),
+        '하이퍼_파라미터n': np.arange(시작값, 종료값+1, 증가값),
         }
     
     gscv = GridSearchCV(
-        회귀_변수       # 모델
-        , params        # 하이퍼 파라미터 목록
-        , cv = 5        # 교차 검증 횟수(K번)
-        , scoring = 'accuracy'         # 평가 지표(정확도)
+        회귀_변수             # 모델
+        , params            # 하이퍼 파라미터 목록
+        , cv = 5            # 교차 검증 횟수(K번)
+        , scoring = 'r2'    # 평가 지표(결정계수)
         , return_train_score = True    # 훈련 데이터 정확도 추가
         , n_jobs = 1    # 사용할 CPU 코어 개수(-1: 모두, 1: 한 개)
         )
@@ -197,18 +197,18 @@ print(f'결정계수: {r2}')
     from sklearn.model_selection import RandomizedSearchCV
 
     params = {
-        '하이퍼 파라미터1': uniform/randint(시작값, 종료값),    # 난수(실수/정수) 생성
+        '하이퍼_파라미터1': uniform/randint(시작값, 종료값),    # 난수(실수/정수) 생성
                    ...
-        '하이퍼 파라미터n': uniform/randint(시작값, 종료값),    # 난수(실수/정수) 생성
+        '하이퍼_파라미터n': uniform/randint(시작값, 종료값),    # 난수(실수/정수) 생성
         }
     
     rscv = RandomizedSearchCV(
-        회귀_변수         # 모델
-        , params          # 하이퍼 파라미터 목록
-        , n_iter = 10     # 난수 생성 횟수
-        , cv = 5          # 교차 검증 횟수(K번)
-        , n_jobs = 1      # 사용할 CPU 코어 개수(-1: 모두, 1: 한 개)
-        , scoring = 'accuracy'         # 평가 지표(정확도)
+        회귀_변수            # 모델
+        , params            # 하이퍼 파라미터 목록
+        , n_iter = 10       # 난수 생성 횟수
+        , cv = 5            # 교차 검증 횟수(K번)
+        , n_jobs = 1        # 사용할 CPU 코어 개수(-1: 모두, 1: 한 개)
+        , scoring = 'r2'    # 평가 지표(결정계수)
         , return_train_score = True    # 훈련 데이터 정확도 추가
         )
     
@@ -226,7 +226,7 @@ print(f'결정계수: {r2}')
     ```
   
 >---
->### 하이퍼파라미터 최적화
+>### 하이퍼 파라미터 최적화
 >릿지／라쏘 - alpha 
 >```
 >train_score = []
