--- a/데이터 전처리.md
+++ b/데이터 전처리.md
@@ -17,7 +17,7 @@
 ```
 ---
 ## 결측치
-누락된 데이터(Not Available)
+누락된 데이터 *(Not Available)*
 ```
 NaN(float), None(object), null, NA(int)
 ```
@@ -65,7 +65,7 @@ NaN(float), None(object), null, NA(int)
   기존의 특성 중, 가장 중요한 특성을 `선택`하는 것
 
 + ### 특성 추출
-  기존의 특성을 사용하여 새로운 특성 `추가`하는 것
+  기존의 특성을 사용하여 새로운 특성을 `추가`하는 것
   ```
   예) 차원 축소
   ```
